# LOS-SFML

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  map-editor.tiled-session
res/Texture-Map/: tile-map.tmj  tile-map.tmx
res/Texture-Tileset/: combined_tilesheet.tsx  tx-grass-tilesheet.tsx  tx-plant-tilesheet.tsx  tx-player-tilesheet.tsx  tx-props-tilesheet.tsx  tx-shadow-plant-tilesheet.tsx  tx-shadow-tilesheet.tsx  tx-stone-ground-tilesheet.tsx  tx-struct-tilesheet.tsx  tx-wall-tilesheet.tsx
res/sprite_config/: sprite_config.json
src/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSpriteConfig.cpp  AnimatedSpriteConfig.h  Clickable.cpp  Clickable.h  ClickableButton.cpp  ClickableButton.h  Colliders.cpp  Colliders.h  GameState.cpp  GameState.h  Layer.cpp  Layer.h  MenuState.cpp  MenuState.h  RenderLoop.cpp  RenderLoop.h  SceneObject.cpp  SceneObject.h  SpriteSheetActionParser.cpp  SpriteSheetActionParser.h  State.cpp  State.h  TMJParser.cpp  TMJParser.h  TileSheetManager.cpp  TileSheetManager.h  UIComponent.cpp  UIComponent.h  main.cpp  test.cpp  test.h
tools/: ClassGenerator.py
tools/headers/: balls.h  foo.h
tools/src/: balls.cpp  foo.cpp
